--- a/InfoTools/FaviconIdentifierPage.xaml
+++ b/InfoTools/FaviconIdentifierPage.xaml
@@ -8,7 +8,7 @@
       d:DesignHeight="450" d:DesignWidth="800"
       Title="Favicon Identifier">
 
-    <Grid Background="White">
+    <Grid Background="White" AllowDrop="True" DragEnter="Grid_DragEnter" DragOver="Grid_DragOver" Drop="Grid_Drop">
         <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center" Width="400">
             <TextBlock Text="favicon identifier"
                        FontSize="24"
