--- a/InfoTools/GetSiteHeadersPage.xaml
+++ b/InfoTools/GetSiteHeadersPage.xaml
@@ -11,6 +11,7 @@
     <Grid Background="White">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
@@ -21,8 +22,17 @@
             <Button x:Name="CheckHeadersButton" Content="Check Site Headers" Width="200" Height="30" IsEnabled="False" Click="CheckHeadersButton_Click"/>
         </StackPanel>
 
+        <!-- Favicon Section -->
+        <StackPanel Grid.Row="1" Margin="20,0,20,20" x:Name="FaviconSection" Visibility="Collapsed">
+            <Label Content="Site Favicon:" FontSize="16" Margin="0,0,0,10"/>
+            <StackPanel Orientation="Horizontal">
+                <Image x:Name="FaviconImage" Width="32" Height="32" Margin="0,0,10,0"/>
+                <TextBlock x:Name="FaviconResultText" FontSize="14" VerticalAlignment="Center"/>
+            </StackPanel>
+        </StackPanel>
+
         <!-- Headers Display -->
-        <ScrollViewer Grid.Row="1" Margin="20">
+        <ScrollViewer Grid.Row="2" Margin="20">
             <StackPanel x:Name="HeadersPanel"/>
         </ScrollViewer>
     </Grid>
