--- a/InfoTools/HomePage.xaml
+++ b/InfoTools/HomePage.xaml
@@ -9,6 +9,13 @@
       Title="Home">
 
     <Grid Background="White">
+        <Canvas x:Name="AlertCanvas" Height="50" Background="Red" Visibility="Hidden">
+            <TextBlock x:Name="AlertText" FontFamily="Consolas" FontSize="18" Foreground="LightGray">
+                <TextBlock.Effect>
+                    <DropShadowEffect Color="Black" ShadowDepth="4" />
+                </TextBlock.Effect>
+            </TextBlock>
+        </Canvas>
         <StackPanel Margin="20">
             <TextBlock Text="Welcome to InfoTools" FontSize="24" FontWeight="Bold" Margin="0,0,0,20"/>
 
